--- a/starship.toml
+++ b/starship.toml
@@ -51,7 +51,7 @@ symbol = " "
 symbol = " "
 
 [git_branch]
-symbol = "🍣 "
+symbol = ""
 
 [golang]
 symbol = " "
@@ -109,6 +109,6 @@ symbol = " "
 symbol = "ﯣ "
 
 [nodejs]
-format = "via [🗿 Node.js $version](bold green) "
+format = "via [Node.js $version](bold green) "
 detect_files = ["package.json", ".node-version"]
 detect_folders = ["node_modules"]
