--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1130,6 +1130,9 @@ map ctrl+1 goto_tab_1
 map ctrl+2 goto_tab_2
 map ctrl+3 goto_tab_3
 
+# inner padding
+window_padding_width 12 
+
 # vim:ft=kitty
 
 ## name:     Catppuccin Kitty Macchiato
