--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,23 +4,23 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 12;
+corner-radius = 12; 
 rounded-corners-exclude = [
   #"window_type = 'toolbar'",
-  "class_g = 'eww-bar'",
-  "class_g = 'eww-powermenu'",
-  "class_g = 'Rofi'",
+  #"class_g = 'eww-bar'",
+  #"class_g = 'eww-powermenu'",
+  #"class_g = 'Rofi'",
   #"class_g = 'Tint2'",
-  "name = 'Notification area'",
+  #"name = 'Notification area'",
   #"class_g = 'kitty'",
   #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
-  "class_g = 'Eww'",
+  #"class_g = 'code-oss'",
+  #"class_g = 'firefox'",
+  #"class_g = 'Thunderbird'",
+  #"class_g = 'Eww'",
 ];
-round-borders = 0;
+round-borders = 12;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
 ];
