--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,17 @@
-#set -g default-terminal "tmux-256color"
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "tmux-253color"
 #set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # action key
 unbind C-b
 set-option -g prefix C-Space
 set-option -g repeat-time 0
 set-option -g focus-events on
+
+set -g mouse on
+
+# Default shell
+set-option -g default-shell /usr/bin/fish
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -16,7 +21,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 #### Key bindings
-# set-window-option -g mode-keys vi
+set-window-option -g mode-keys vi
 
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
@@ -24,27 +29,29 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 bind o run-shell "open #{pane_current_path}"
 bind -r e kill-pane -a
 
+# Open in current directory
+bind c new-window -c "#{pane_current_path}"
 bind '/' split-window -v -c "#{pane_current_path}"
-bind '"' split-window -h -c "#{pane_current_path}"
+bind ';' split-window -h -c "#{pane_current_path}"
 
 # vim-like pane switching
-# bind -r k select-pane -U 
-# bind -r j select-pane -D 
-# bind -r h select-pane -L 
-# bind -r l select-pane -R 
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
 
 # Resizing pane
-# bind -r C-k resize-pane -U 5
-# bind -r C-j resize-pane -D 5
-# bind -r C-h resize-pane -L 5
-# bind -r C-l resize-pane -R 5
+bind -r C-k resize-pane -U 5
+bind -r C-j resize-pane -D 5
+bind -r C-h resize-pane -L 5
+bind -r C-l resize-pane -R 5
 
 #### basic settings
 set-option -g status-justify "left"
-#set-option utf8-default on
-#set-option -g mouse-select-pane
-# set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
+set-option utf8-default on
+set-option -g mouse-select-pane
+set-window-option -g mode-keys vi
+set-window-option -g utf8 on
 # look'n feel
 set-option -g status-fg cyan
 set-option -g status-bg black
