Change clock mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@
 #set -ga terminal-overrides ",*256col*:Tc"
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
 # action key
 unbind C-b
 set-option -g prefix C-Space
@@ -13,11 +14,16 @@ set -g mouse on
 # Default shell
 set-option -g default-shell /usr/bin/fish
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 #### Key bindings
@@ -25,6 +31,7 @@ set-window-option -g mode-keys vi
 
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+
 # Open current directory
 bind o run-shell "open #{pane_current_path}"
 bind -r e kill-pane -a
@@ -40,18 +47,24 @@ bind -r j select-pane -D
 bind -r h select-pane -L 
 bind -r l select-pane -R 
 
+# Copy Paste
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
+bind -r C-k resize-pane -U 20
+bind -r C-j resize-pane -D 20 
+bind -r C-h resize-pane -L 20 
+bind -r C-l resize-pane -R 20 
 
 #### basic settings
 set-option -g status-justify "left"
-set-option utf8-default on
-set-option -g mouse-select-pane
 set-window-option -g mode-keys vi
-set-window-option -g utf8 on
+# set-option utf8-default on
+# set-window-option -g utf8 on
+# set-option -g mouse-select-pane
+
 # look'n feel
 set-option -g status-fg cyan
 set-option -g status-bg black
@@ -86,6 +99,7 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+set -g status-right "#[fg=cyan]%A, %d %b %Y %I:%M %p"
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
